# component-generic

./: .gitignore  Dockerfile  README.md  README_LEGACY.md  bitbucket-pipelines.yml  docker-compose.yml  flake8.cfg  pyproject.toml  requirements.txt  tests-requirements.txt
.github/workflows/: push.yml
component_config/: cfgSchemaAlt.json  component_long_description.md  component_short_description.md  configuration_description.md
docs/examples/: docker-compose.yml  run_examples.py
docs/examples/001-simple-json/: config.json
docs/examples/002-simple-json-chunked-single/: config.json  orders.requestHeaders
docs/examples/003-simple-json-chunked-multi/: config.json  orders1.request
docs/examples/004-empty-request-iterations/: config.json  orders123.request  orders234.requestHeaders
docs/examples/005-json-iterations/: config.json
docs/examples/006-simple-json-custom-headers/: config.json  orders.requestHeaders
docs/examples/007-simple-json-force-datatype/: config.json  orders.request  orders.requestHeaders
docs/examples/008-simple-json-nested-object-delimiter/: config.json  orders.request  orders.requestHeaders
docs/examples/009-simple-json-request-parameters/: config.json
docs/legacy_v1_examples/: convert_tov2.py
src/: component.py  configuration.py  json_converter.py  placeholders_utils.py  user_functions.py
src/http_generic/: auth.py  client.py  signature.py
tests/: test_auth.py  test_component.py  test_configuration.py  test_functional.py
tests/functional/: custom_matchers.py
tests/resources/: configv2.json  configv2_minimal.json
(+151 files in other folders)
